Change profile icon and fix menu buttons on small screens.
vst/vst-utils#109

[ci skip]

--- a/vstutils/static/css/gui.css
+++ b/vstutils/static/css/gui.css
@@ -1537,6 +1537,13 @@ table{
 
 }
 
+.btn-icon {
+    width:30px;
+    height: 31px;
+    padding: 0px;
+    text-align: center;
+}
+
 .profile-menu{
     margin-top: 8px;
     border-radius: 0px;
